--- a/.travis.yml
+++ b/.travis.yml
@@ -130,9 +130,7 @@ matrix:
     - env: TEST_DIM=16x256 VALGRIND_TEST="--threads=2 --owf=1 --preset=veryslow"
 
 install:
-  - echo $PWD
-  - ./travis-install.sh
+  - ./.travis-install.sh
 
 script:
-  - echo $PWD
-  - ./travis-script.sh
+  - ./.travis-script.sh
